public/stylesheets/admin/admin.css
#language-bar,
#login-nav,
#store-nav {
  float: right;
 	margin-top: 10px;}
  #language-bar li,
  #login-nav li,
  #store-nav li {
    float: left;
    margin-right: 1em;
    list-style: none; }

.address-form label,
#creditcard label {
  width: 200px;
  display: block;
  float: left; }

#creditcard label {
  width: 150px; }

input.default {
  color: #999; }
  input.default:focus {
    color: inherit; }

p.help-text {
  font-style: italic;
  font-weight: normal;
  margin-bottom: 0;
  color: #999; }




body {
  background-color: #162F54;
  color: #476D9B; }
  a {
    color: #4884BD; }
    a:active,
    a:visited {
      color: #4884BD; }
  #header,
  #footer {
		position: relative;
    clear: both; }
  #content {
    margin: 0em 1em 1em 1em;
    padding: 1em;
    background: #fff;
    color: #111;
    min-height: 500px; }
    #content a {
      color: #3C7DFB; }
      #content a:active,
      #content a:visited {
        color: #3C7DFB; }
    #content.with-sidebar {
      background: #fff url(../../images/admin/bg/content-back.png) right top repeat-y;
      padding-right: 340px;
      position: relative; }
      #sidebar {
        position: absolute;
        width: 305px;
        top: 0; right: 0;
        padding-top: 3em;
        }
        #sidebar .box {
          padding:10px;
        }
        #sidebar .box h3 { margin: 0 0 10px 0; }
        #sidebar h3 {
          margin: 0 10px; }
          #sidebar h3 a {
            color: #111;
            text-decoration: none; }
        #sidebar span.sku {
          display: block;
          font-weight: normal; }
        #sidebar img {
          float: right;
          margin-right: 1em; }
          #sidebar img.calendar_date_select_popup_icon {
            float: none; }
        #sidebar .field {
          padding: 0 1em; }
        #sidebar .form-buttons {
          padding: 0 1em; }
        #sidebar h4 {
          margin-left: 10px; }
        #sidebar ul.sidebar {
          clear: both;
          position: relative;
          margin: 0;
          padding: 0; }
          #sidebar ul.sidebar li {
            list-style: none; }
            #sidebar ul.sidebar li a {
              display: block;
              padding: 10px 20px 10px;
              outline: none;
              text-decoration: none;
              color: #666 !important; }
              #sidebar ul.sidebar li a:hover { background-color:#ddd }
              #sidebar ul.sidebar li.active a {
                font-weight: bold;
                background: url(../../images/admin/bg/menu-current.png) left center no-repeat;
                color: #363 !important;
                margin-left: -20px;
                padding-left: 30px; }
        #sidebar .order-number,
        #sidebar .order-status {
          text-align: right;
          margin-right: 20px; }
        #sidebar .order-status {
          padding: 7px 15px;
          -moz-border-radius: 3px;
          -webkit-border-radius: 3px;
          float: right;
          background-color: #999;
          color: #111;
          text-transform: uppercase; }
          #sidebar .order-status.new {
            background-color: #5D9C0F;
            color: #fff; }
          #sidebar .order-status.canceled {
            background-color: #c00;
            color: #fff; }
  h1.logo {
    float: left;
    margin: 20px 10px 10px 10px;	 }
    h1.logo a {
      background: url(../../images/admin/bg/spree_50.png) left center no-repeat;
      padding-left: 120px;
      display: block;
      height: 50px;
      text-decoration: none;
      line-height: 50px;
      color: #BBDAFD; }
  #admin-menu { clear: both; }
  #admin-menu,
  #sub-menu {
    margin: 0 1em; 
    }
    #admin-menu li {

    }
    #admin-menu ul,
    #sub-menu ul {
      padding: 0;
      margin: 0; }
      #admin-menu ul li,
      #sub-menu ul li {
        float: left;
        margin-right: 1em;
        list-style: none; }
      #admin-menu ul li,
      #sub-menu ul li {
        margin-right: 0; margin-bottom: -1px;}
        #admin-menu ul li a,
        #sub-menu ul li a {
          display: block;
          padding: 10px 20px;
          color: #fff;
          text-decoration: none;
          outline: none; }
        #admin-menu ul li.selected a,
        #sub-menu ul li.selected a {
          background-color: #0095da; 
          }
        #admin-menu ul li.selected {
          border-bottom:1px solid #0095DA;
        }
  #IE7 #admin-menu {
    height: 39px; }
  #admin-menu {
    background: #154e8c url(../../images/admin/bg/admin_tab_back.png) top left repeat-x;
    border-top: 1px solid #4B83E2;
    border-right: 1px solid #34599B;
    border-bottom: 1px solid #41A6F0; 
    }
    #admin-menu ul {
      margin-bottom: -1px; }
      #admin-menu ul li:first-child {
        border-left: 1px solid #34599B; }
      #admin-menu ul li.selected {
        background: #0095da url(../../images/admin/bg/admin_tab_selected_back.png) top left repeat-x;
        border-left: 1px solid #41A6F0;
        border-top: 1px solid #41A6F0;
        border-right: 1px solid #4986BF;
        height: 40px;
        margin-top: -2px; }
  #sub-menu {
    background: #0095da;
    border-left: 1px solid #41A6F0;
    border-right: 1px solid #4986BF; }
    #IE7 #sub-menu ul {
      height: 26px; }
    #sub-menu ul li a {
      padding: 3px 7px;
      margin: 10px 5px;
      color: #154e8c;
      background: none; }
    #sub-menu ul li.selected a {
      background: #154e8c;
      color: #9BC3FC;
      -moz-border-radius: 3px;
      -webkit-border-radius: 3px; }
  #slide-content {
    margin: 0 1em;
    background-color: #cdf; }
  .toolbar {
    float: right;
    margin-bottom: 1em; }
    .toolbar ul.actions {
      margin: 0;
      padding: 0;
      float: right; }
      .toolbar ul.actions li {
        float: left;
        margin-right: 1em;
        list-style: none; }
      .toolbar ul.actions li {
        margin-right: 0; }
    .toolbar.order-links a {
      text-transform: capitalize; }
  .search-form {
    display: none;
    padding: 1em; }
    .search-form label {
      display: block; }
  a.button {
    background: transparent url(../../images/admin/buttons/right_01.png) no-repeat scroll top right;
    display: block;
    float: left;
    margin-right: 6px;
    padding-right: 20px;
    text-decoration: none;
    color: #111 !important;
    font-weight: bold;
    outline: none; }
    a.button span {
      background: transparent url(../../images/admin/buttons/left_01.png) no-repeat;
      display: block;
      line-height: 22px;
      padding: 7px 0 5px 14px;
      text-shadow: #efefef 1px 1px 0px; }
    a.button img {
      vertical-align: middle;
      margin: 0 3px 0 0; }
    a.button.cancel span {
      font-weight: normal; }
    a.button.small {
      font-size: 1em;
      background: transparent url(../../images/admin/buttons/right_01_small.png) no-repeat scroll top right;
      padding-right: 20px; }
      a.button.small span {
        background: transparent url(../../images/admin/buttons/left_01_small.png) no-repeat;
        padding: 5px 0 3px 20px;
        line-height: 21px; }
    a.button.green {
      background: transparent url(../../images/admin/buttons/green/right_01.png) no-repeat scroll top right;
      color: #151 !important; }
      a.button.green span {
        background: transparent url(../../images/admin/buttons/green/left_01.png) no-repeat; }
  button {
    border: 0;
    cursor: pointer;
    font-weight: bold;
    padding: 0 20px 0 0;
    text-align: center;
    background: url(../../images/admin/buttons/right_01.png) center right no-repeat;
    font-size: 1.3em;
    outline: none; }
    button span {
      position: relative;
      display: block;
      white-space: nowrap;
      padding: 0 0 0 20px;
      height: 35px;
      line-height: 35px;
      background: url(../../images/admin/buttons/left_01.png) center left no-repeat;
      text-shadow: #efefef 1px 1px 0px; }
      button span img {
        vertical-align: middle;
        margin: 0 3px 0 0; }
    button:focus {
      outline: none; }
    button.tick {
      background: none;
      width: 24px; }
  input.title,
  textarea {
    margin: 0; }
  .errorExplanation {
    border: solid 2px #f15700;
    padding: 1em;
    margin-bottom: 1em;
    background: #cdf;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px; }
    .errorExplanation ul {
      color: #f15700;
      list-style: square; }
    .errorExplanation h2 {
      font-size: 1.75em;
      padding-left: 40px;
      background: url(../../images/admin/icons/orb/32x32/3.png) center left no-repeat; }
  ul.checkbox-list {
    list-style: none; }
    ul.checkbox-list li {
      display: block;
      float: left;
      width: 200px; }
      ul.checkbox-list li label {
        font-weight: normal !important; }
  #busy_indicator {
    margin-bottom: 1em; }
  select#filter_state {
    font-size: 1.5em; }
  h2.order-number {
    margin-bottom: 0; }
  h4.order-status {
    display: block;
    font-weight: normal; }
  .adr {
    float: left;
    margin-right: 1em;
    margin-bottom: 1em;
    padding: 1em;
    border: solid 1px #999;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    min-width: 200px; }
    .adr .fn {
      font-weight: bold; }
    .adr h4 {
      margin-bottom: 1em;
      border-bottom: 1px solid #ccc;
      padding-bottom: .5em;
      color: #666; }
  ul.taxonomy-tree {
    cursor: default;
    list-style: none;
    margin: 0;
    padding: 0 0 0 35px;
    min-height: 2em; }
    ul.taxonomy-tree li.taxon {
      clear: both;
      padding: 5px; }
      ul.taxonomy-tree li.taxon span,
      ul.taxonomy-tree li.taxon input {
        float: left;
        margin-right: 1em; }
      ul.taxonomy-tree li.taxon .name {
        float: left;
        cursor: move; }
      ul.taxonomy-tree li.taxon.new ul.taxonomy-actions,
      ul.taxonomy-tree li.taxon.editing ul.taxonomy-actions {
        display: none; }
      ul.taxonomy-tree li.taxon.to-destroy {
        color: #900;
        text-decoration: line-through; }
        ul.taxonomy-tree li.taxon.to-destroy ul.taxonomy-actions {
          display: none; }
  .placeholder {
    height: 30px;
    clear: both;
    border: dashed 2px #ddd; }
  ul.taxonomy-actions {
    float: left;
    list-style: none;
    margin: 0px 0px 10px 10px;
    padding: 0; }
    ul.taxonomy-actions li {
      float: left;
      margin-right: 5px; }
      ul.taxonomy-actions li img {
        vertical-align: text-top; }
      ul.taxonomy-actions li.disabled {
        opacity: .5; }
  h3.warning {
    background-image: url(../../images/admin/icons/fugue/exclamation.png);
    background-position: 10px 15px;
    background-repeat: no-repeat;
    padding-left: 35px; }
  #searching {
    clear: both;
    margin-top: 2em; }


.pagination{
	padding-top: 10px;
	text-align: right;
}
a.page, span.page {  
	padding: 0px 5px; 
	margin: 0 3px;
}
a.page {  	  
	text-decoration: none;  
	border: 1px solid #9aafe5;
	color: #2e6ab1;	
}
a.page:hover, a.page:active {  
	border: 1px solid #2b66a5;
	color: #000;
	background-color: LightYellow;	
} 

a.next_page {
	font-weight: bold;
}


span.disabled_page {  
	border: 1px solid #929292;
	color: #929292;
} 

span.current_page {  
	font-weight: bold;
	border: 1px solid navy;
	background-color: #2e6ab1;
	color: #FFF;
}                  

div#calculator-settings-warning {
 color: #f00;
}
#progress{
	display:none;
	background:#154E8C url(../../images/admin/bg/admin_tab_back.png) repeat-x scroll left top;
	color:#fff;
	font-size:170%;
	height:25px;
	left:33%;
	padding:10px 0 15px;
	position:absolute;
	text-align:center;
	width:33%;
	font-weight:bold;
	-moz-border-radius-bottomleft:15px;
	-moz-border-radius-bottomright:15px;
}
#progress img{
	vertical-align:middle;
	padding-right:10px;
}
 
ul#shipping-specs {
  margin: 0;  
  padding-bottom:10px;  
}
ul#shipping-specs li {
  list-style-image:none;
  display:inline;
}

